--- a/MusicPro/login/inicioSecion.css
+++ b/MusicPro/login/inicioSecion.css
@@ -2,7 +2,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     scroll-behavior: smooth;
     background-image: url("/img/fondoL.jpg");
@@ -128,66 +127,37 @@ header .navigation li a:hover {
     color: #ff0157;
 }
 
-.row {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+/*formulario*/
+
+#formulario{
+    margin-top: 150px;
 }
-
-.row .col50 {
-    position: relative;
-    width: 48%;
-}
-
-.tittleText {
-    color: #111;
-    font-size: 2em;
-    font-weight: 300;
-}
-
-.tittleText span {
-    color: #ff0157;
-    font-weight: 700;
-    font-size: 1.5em;
-}
-
-.row .col50 .imgBx {
-    position: relative;
-    width: 100%;
-    /*min-height: 300px;*/
-    height: 100%;
-}
-
-.row .col50 .imgBx img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.tittle {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-
 #contenedor{
-  flex: 1 0 30%;
-  margin-bottom: 20px;
-  padding: 2px;
-  background-color: #fffdfdbb;
-  border: 8px solid #ff0157;
-  text-align: center;
-  display: center;
-  align-self: center;
-  justify-content: center;
-  min-height: 350px;
-  width: 450px;
+    padding: 50px;
+    background-color: #fffdfdbb;
+    border: 8px solid #ff0157;
+    display: flex;
+    flex-direction: column;
+    min-height: 350px;
+    width: 450px;
+    align-items: center;
 
 }
+.login{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
+}
+.correo, .contraseña{
+    justify-content: center;
+    text-align: center;
+
+}
+
+.other{
+    margin-top: 20px;
+}
+
+
+
