--- a/MusicPro/login/registro.css
+++ b/MusicPro/login/registro.css
@@ -7,8 +7,11 @@
     scroll-behavior: smooth;
 
 }
-body.home{
+#home{
     background-image: url("/MusicPro/img/fondoL.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 p {
     font-weight: 300;
@@ -130,69 +133,44 @@ header .navigation li a:hover {
     color: #ff0157;
 }
 
-.row {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
 
-.row .col50 {
-    position: relative;
-    width: 48%;
-}
-
-.tittleText {
-    color: #111;
-    font-size: 2em;
-    font-weight: 300;
-}
-
-.tittleText span {
-    color: #ff0157;
-    font-weight: 700;
-    font-size: 1.5em;
-}
-
-.row .col50 .imgBx {
-    position: relative;
-    width: 100%;
-    /*min-height: 300px;*/
-    height: 100%;
-}
-
-.row .col50 .imgBx img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.tittle {
-    width: 100%;
+#registro{
+    margin-top: 150px ;
     display: flex;
     justify-content: center;
-    align-items: center;
+}
+#contenedor{
+    padding: 10px;
+    background-color: #d8d4d4f3;
+    border: 8px solid #ff0157;	
+    border-radius: 10px;
+    min-height: 550px;
+    width: 800px;
+    display: flex;
+    gap: 20px;
     flex-direction: column;
+    align-items: center;
+
+}
+.fila{
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
 }
 
+.btn_enviar{
+    background: #ff0157;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid transparent;
+    color: white;
 
+}
 
-#contenedor{
-    flex: 1 0 30%;
-    margin-bottom: 20px;
-    padding: 20px;
-    background-color: #fffdfdbb;
-    border: 8px solid #ff0157;
-    text-align: center;
-    display: flex;
-    align-self: center;
-    justify-content: center;	
-    min-height: 750px;
-    width: 800px;
-
+.btn_enviar:hover{
+    border: 1px solid black;
+    color: black;
+    box-shadow: 0 1px 2px 3px gray ;
 }
 
  
@@ -205,3 +183,47 @@ header .navigation li a:hover {
 .mostrar {
     display: block;
 }
+
+#footer{
+    margin-top: 100px;
+    padding: 0 25px;
+    width: 100%;
+    height: 250px;
+    background: #212121;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+
+}
+
+#footer .fila{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    
+}
+#footer .line_footer{
+    margin: 2px;
+}
+#footer .columna{
+    gap: 10px;
+    margin-top: 10px;
+}
+
+#footer .bodyf{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+#footer .hvf{
+    text-decoration: underline;
+    color:gray
+}
+
+#footer .hvf:hover{
+    cursor: pointer;
+    color: red;
+}
+#Copyright{
+    text-decoration: underline;
+}
+
