--- a/MusicPro/carrito/productos.css
+++ b/MusicPro/carrito/productos.css
@@ -210,10 +210,68 @@ section {
 }
 
 /* --------Productos-------- */
-.container {
-	max-width: 1000px;
-	margin:auto;
+.carrito {
+    display: flex;
+	width: 100%;
+	margin:10px;
 	padding: 20px;
+}
+.categori{
+    width: 200px;
+    padding: 0;
+    margin: 0;
+}
+.category_list{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    margin: 0;
+}
+.items{
+    overflow-x: scroll;
+    margin: 20px;
+    padding: 20px;
+    width: 100%;
+    height: 500px;
+    gap: 10px;
+    
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.carro{
+    
+    margin-left: 40px ;
+    align-items: right;
+    width: 300px;
+}
+.row{
+    width: 300px;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid gray;
+    border-radius: 16px;
+    padding: 10px;
+}
+
+.btn_borrar{
+    background: #ff0157;
+    padding: 1px 10px;
+    border-radius: 16px;
+}
+
+.listado{
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+}
+
+.column h2{
+    text-align: center;
+    border: 1px solid black;
 }
 
 .product-row {
@@ -229,55 +287,61 @@ section {
     
 }
 
-.card {
-	flex: 1 0 30%;
+.tarjeta {
+    width: 300px;
+    height: 450px;    
 	margin-bottom: 20px;
 	padding: 20px;
 	background-color: #fffdfdbb;
-	border: 8px solid #ff0157;
-	text-align: center;
+	border: 4px solid #ff0157;
+    border-radius: 10px;
 }
 
-.card img {
-	max-width: 100%;
-	margin-bottom: 10px;
+.cuerpoT{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.card h2 {
-	font-size: 1.5rem;
-	margin-bottom: 10px;
+.img_product{
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    justify-content: center;
+
+}
+.tituloT{
+    text-align: center;
+    text-decoration: underline;
 }
 
-.card p {
-	font-size: 1.2rem;
-	margin-bottom: 10px;
+
+.descriptionT{
+    padding: 0 5px;
+    max-width: 200px;
+    
+    text-align: left;
+
 }
 
-.card .price {
-	font-size: 1.5rem;
-	font-weight: bold;
+.btn{
+    border: 1px solid transparent;
+    border-radius: 10px;
 }
 
-.img_card{
-    width: 100%;
-    height: 324px;
+.btn:hover{
+    border: 1px solid black;
+    color: #111;
+    box-shadow: 0 1px 2px 3px gray;
+    border-radius: 10px;
 }
+
 
 /*filtro*/
 
-.category_list{
-     display: flex;
-     padding: 10px;
-     flex-direction: column;
-     width: 18%;
-}
 
-.categori{
-    width: 100%;
-    position: relative;
-    padding: 0;
-    margin: 0;
-}
+
+
 
 .category_list .categori_item{
   display: block;
