--- a/MusicPro/carrito/productos.css
+++ b/MusicPro/carrito/productos.css
@@ -229,11 +229,13 @@ section {
     margin: 0;
 }
 .items{
+    border: 1px solid black;
+    overflow-y: hidden;
     overflow-x: scroll;
     margin: 20px;
     padding: 20px;
     width: 100%;
-    height: 500px;
+    height: 480px;
     gap: 10px;
     
     display:flex;
