--- a/MusicPro/carrito/productos.css
+++ b/MusicPro/carrito/productos.css
@@ -90,7 +90,6 @@ p {
 }
 
 .btn:hover {
-    letter-spacing: 6px;
 }
 
 header {
@@ -264,6 +263,8 @@ section {
     background: #ff0157;
     padding: 1px 10px;
     border-radius: 16px;
+    width: 35px;
+    height: 35px;
 }
 
 .listado{
