--- a/MusicPro/style.css
+++ b/MusicPro/style.css
@@ -202,3 +202,47 @@ section {
     align-items: center;
     flex-direction: column;
 }
+
+#footer{
+    margin-top: 100px;
+    padding: 0 25px;
+    width: 100%;
+    height: 250px;
+    background: #212121;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+
+}
+
+.fila{
+    padding: 30px;
+    
+    display: flex;
+    flex-direction: column;
+    color: white;
+    
+}
+.line_footer{
+    margin: 2px;
+}
+.columna{
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.bodyf{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.hvf{
+    text-decoration: underline;
+    color:gray
+}
+
+.hvf:hover{
+    cursor: pointer;
+    color: red;
+}
+#Copyright{
+    text-decoration: underline;
+}
