--- a/MusicPro/carrito1.1/productos.css
+++ b/MusicPro/carrito1.1/productos.css
@@ -234,10 +234,26 @@ header .navigation li a:hover {
 #miVentana1{
     display: block;
     position: absolute;
-    background: #7d7a7a;
+    border:1px solid black;
+    border-radius: 10px;
+    background: #fff;
     width: 500px;
     height: 650px;
     padding: 40px;
+}
+#región{
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 10px 6px;
+}
+.title_select{
+    position: absolute;
+    background-color: #fff;
+    left: 45px;
+    top: 87px;
+    padding: 0 4px;
+    font-size: 12px;
+    font-weight: 400;
 }
 
 .contenido {
