procesos de compra(terminado)

--- a/MusicPro/carrito1.1/productos.css
+++ b/MusicPro/carrito1.1/productos.css
@@ -232,7 +232,7 @@ header .navigation li a:hover {
 }
 #not_float{
     display: flex;
-    backdrop-filter: none;
+    filter: blur(5px);
     flex-direction: row;
 
 }
