organizacion de archivo)

--- a/Ordenado/css/bodeguero.css
+++ b/Ordenado/css/bodeguero.css
@@ -73,3 +73,62 @@ header.sticky .navigation li a {
 header .navigation li a:hover {
     color: #ff0157;
 }
+
+/*---------------tabla------------*/
+#ordenes{
+    margin: 150px 30px 0px 30px;
+    
+}
+
+.btna {
+    font-size: 1em;
+    color: #fff;
+    background: #ff0157;
+    display: inline-block;
+    padding: 10px 30px;
+    margin-top: 20px;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: 0.5s;
+}
+.pendientes{
+    
+    padding: 40px;
+    width: 900px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+.tab_order{
+    overflow-y: auto;
+    border: 1px solid black;
+  }
+
+.tab_order table {
+    border-collapse: separate;
+    border-spacing: 0;
+  }
+  
+.tab_order table thead {
+    position: sticky;
+    background-color: gray;
+    top: 0;
+    left: 0;
+  }
+.pendientes th, .pendientes td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
+
+  p {
+    font-weight: 300;
+    color: #111;
+}
+
