organizacion de archivo-correcion de hipervinculos)

--- a/Ordenado/css/inicioSecion.css
+++ b/Ordenado/css/inicioSecion.css
@@ -9,7 +9,7 @@
 #home{
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("/MusicPro/img/fondoL.jpg")
+    background-image: url("/Ordenado/img/fondoL.jpg")
     
     
 }
