--- a/Ordenado/css/registro.css
+++ b/Ordenado/css/registro.css
@@ -8,7 +8,7 @@
 
 }
 #home{
-    background-image: url("/MusicPro/img/fondoL.jpg");
+    background-image: url("/Ordenado/img/fondoL.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
